<resources>
    <string name="app_name">PruebaSegundaEvaluacion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dni">DNI</string>
    <string name="contrasenha">Contraseña</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="iniciarSecion">Iniciar Sesión</string>
    <string name="resgistrarse">Resgistrarse!</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="ordenar_por">Ordenar Por</string>
    <string name="filtrar_categorias">Filtrar Categorias</string>
    <string name="aceptar">Aceptar</string>
    <string name="productos_en_la_cesta">Productos en la cesta</string>
    <string name="detalles_del_producto">Detalles del producto</string>
    <string name="producto">Producto</string>
    <string name="cantidad_de_stock">Cantidad de stock</string>
    <string name="precio_litro_kilo">Precio litro/kilo</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="direcci_n">Dirección</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="tel_fono_de_contacto">Teléfono de contacto</string>
    <string name="registrar">Registrar</string>
    <string name="registro_de_usuario">Registro de usuario</string>
    <string name="nombre">Nombre</string>
    <string name="apellidos">Apellidos</string>

    <string name="ver_detalles">Ver detalles</string>

    <string name="volver_a_la_lista_original">Volver a la lista original</string>
    <string name="ir_a_la_cesta">Ir a la cesta</string>
    <string name="a_adir_a_la_cesta">Añadir a la cesta</string>
    <string name="eliminar_de_la_cesta">Eliminar de la cesta</string>
</resources>