<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentDetallesProducto">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/detalles_del_producto"
        android:textColor="@color/green"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imageViewProductoFragDetalles"
        android:layout_width="172dp"
        android:layout_height="169dp"
        android:scaleX="0.75"
        android:scaleY="0.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo"
        tools:src="@drawable/producto_prueba2" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewProductoFragDetalles">

        <TableRow>

            <TextView
                android:id="@+id/textViewProducto"
                android:background="@color/green"
                android:padding="5dp"
                android:text="@string/producto"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewNombreProductoFragDetalles"
                android:layout_weight="1"
                android:background="@color/light_green"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="Botella de agua" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewCantidad"
                android:background="@color/light_green"
                android:padding="5dp"
                android:text="@string/cantidad_de_stock"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewCantidadProductoFragDetalles"
                android:layout_weight="1"
                android:background="@color/green"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="5" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/textViewPrecio"
                android:background="@color/green"
                android:padding="5dp"
                android:text="@string/precio_litro_kilo"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewPrecioProductoFragDetalles"
                android:layout_weight="1"
                android:background="@color/light_green"
                android:gravity="center"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="5.99€" />
        </TableRow>
    </TableLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonAñadirCestaDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/green"
        android:text="@string/a_adir_a_la_cesta"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonIrAlaCesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/ir_a_la_cesta"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/buttonAñadirCestaDetalles"
        app:layout_constraintStart_toStartOf="@+id/buttonAñadirCestaDetalles"
        app:layout_constraintTop_toBottomOf="@+id/buttonAñadirCestaDetalles" />


</androidx.constraintlayout.widget.ConstraintLayout>