<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentRegistro">

    <ImageView
        android:id="@+id/imageViewFondoVerde"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:src="@drawable/fondo_vender_redondeado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registro"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="@id/imageViewFondoVerde"
        app:layout_constraintEnd_toEndOf="@id/imageViewFondoVerde"
        app:layout_constraintStart_toStartOf="@id/imageViewFondoVerde"
        app:layout_constraintTop_toTopOf="@+id/imageViewFondoVerde" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="63dp"
            android:src="@drawable/icono_usuario" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldDNIRegistro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/dni"
            app:helperText="*Obligatorio"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="273dp"
                android:layout_height="51dp"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="61dp"

            android:src="@drawable/icono_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPasswordRegistro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/contrasenha"
            app:helperText="*Obligatorio | Dígitos 8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="273dp"
                android:layout_height="51dp"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="61dp"

            android:src="@drawable/icono_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPasswordConfirmacionRegistro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/confirmar_contrase_a"
            app:helperText="*Confirmar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="273dp"
                android:layout_height="51dp"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="61dp"

            android:src="@drawable/icono_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldEmailRegistro"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/correo_electr_nico"
            app:helperText="*Obligatorio"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="273dp"
                android:layout_height="51dp"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="61dp"

            android:src="@drawable/icono_direccion" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPassword4"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/direcci_n"
            app:helperText="*Obligatorio"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="273dp"
                android:layout_height="51dp"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

        <ImageView
            android:layout_marginTop="7dp"
            android:layout_width="60dp"
            android:layout_height="50dp"

            android:src="@drawable/icono_telefono_contacto" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldPassword5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/tel_fono_de_contacto"
            app:helperText="*Obligatorio"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="273dp"
                android:layout_height="51dp"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>